Sales force Blueprint Updated